# manual_tests

./: README.md
tests/: Cargo.toml
tests/resources/: .gitignore  onex-testnet-genesis-proposal.json  onex-testnet-genesis.json  onex_testnet_hermes_config.toml
tests/src/lib/: common.rs  contest.rs  get_key.rs
