[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "src/lib/common.rs"

[dependencies]
bech32 = "0.9"
bip32 = "0.5"
bip39 = "2"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4", features = ["derive"] }
cosmos-sdk-proto = { package = "cosmos-sdk-proto-althea", version = "0.13" }
csv = "1.2"
#deep_space = { path = "./../../deep_space" }
deep_space = { git = "https://github.com/onomyprotocol/deep_space.git", rev = "5c6e354ef3f2c8bb0f5a8f64921dba47182aaec1" }
lazy_static = "1"
log = "0.4"
#onomy_test_lib = { path = "./../../onomy_tests/onomy_test_lib" }
onomy_test_lib = { git = "https://github.com/pendulum-labs/onomy_tests", rev = "41af67402dd5f087bb46c36ccbaf2d0e3e1fe28f" }
ripemd = "0.1"
ron = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", default-features = false }
u64_array_bigints = { version = "0.3", default-features = false }

[features]
default = []
